# commit-wizard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  nohup.out
.github/workflows/: build.yml  ci.yml  common-build.yml  lint.yml  prepare-release.yml  publish.yml  release.yml
commit-wizard-cli/: Cargo.toml
commit-wizard-cli/src/: main.rs
commit-wizard-core/: Cargo.toml
commit-wizard-core/src/: ai.rs  git.rs  lib.rs  utils.rs
commit-wizard-core/src/ai/: api.rs  intelligence.rs  mod.rs  models.rs  patterns.rs  prompts.rs  validation.rs
commit-wizard-napi/: .gitignore  .npmignore  Cargo.toml  bin.js  index.d.ts  index.js  package-lock.json  package.json
commit-wizard-napi/.github/workflows/: CI.yml
commit-wizard-napi/npm/darwin-arm64/: README.md  package.json
commit-wizard-napi/npm/darwin-x64/: README.md  package.json
commit-wizard-napi/npm/linux-arm-gnueabihf/: README.md  package.json
commit-wizard-napi/npm/linux-arm64-gnu/: README.md  package.json
commit-wizard-napi/npm/linux-arm64-musl/: README.md  package.json
commit-wizard-napi/npm/linux-x64-gnu/: README.md  package.json
commit-wizard-napi/npm/linux-x64-musl/: README.md  package.json
commit-wizard-napi/npm/win32-x64-msvc/: README.md  package.json
commit-wizard-napi/scripts/: clean-artifact.mjs  prepare-host-for-prepublish.mjs  stage-artifact.mjs  sync-version.mjs
commit-wizard-napi/src/: lib.rs
scripts/: sync-versions.sh
src/: ai.rs  git.rs  main.rs  utils.rs
