[workspace]
members = [
    "commit-wizard-core",
    "commit-wizard-cli",
    "commit-wizard-napi",
]
resolver = "2" # Good practice for modern workspaces

# Optional: Define shared profile settings for all workspace members
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true # "symbols" is also an option, true is more aggressive

[workspace.package]
version = "0.2.9"
edition = "2021"
authors = ["Jamie <jamie@jamieh.dev>"]
