[workspace]
members = [
    "commit-wizard-core",
    "commit-wizard-cli",
    "commit-wizard-napi",
]
resolver = "2" # Good practice for modern workspaces

[workspace.package]
version = "1.3.0"
authors = ["jamie (jamiehdev)"]
license = "MIT"
edition = "2021"
repository = "https://github.com/jamiehdev/commit-wizard"

# Optional: Define shared profile settings for all workspace members
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true # "symbols" is also an option, true is more aggressive
