[package]
name = "commit-wizard-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone CLI for AI-powered conventional commit message generation"

[dependencies]
commit-wizard-core = { path = "../commit-wizard-core" }
tokio = { version = "1.35", features = ["full"] } # For #[tokio::main]
anyhow = "1.0" # For Result type in main
clap = { version = "4.4", features = ["derive"] } # For CoreCliArgs::parse()
# dotenv and style are used via commit_wizard_core re-exports in main.rs

[[bin]]
name = "commit-wizard"
path = "src/main.rs" 